--- a/styles/faq.css
+++ b/styles/faq.css
@@ -1,61 +1,587 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300);
-.accordian {
-   width: 700px;
-   margin: 40px auto 30px auto;
-   text-align: left;
+/** @format */
+
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-.accordian label {
-   padding: 5px 20px;
-   position: relative;
-   z-index: 20;
-   display: block;
-   cursor: pointer;
-   font-family:'Open Sans', Arial, sans-serif;
-   border: 1px solid #e1e1e1;
-color: #222;
-   line-height: 63px;
-   font-size: 18px;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+* {
+  font-family: "Roboto", sans-serif;
+}
+/* Nav Styling Start */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+/* thumbnail starts */
+.thumbnail {
+  /* max-width: 1000px; */
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 68%;
+  max-width: 10000px;
+  margin: auto;
+}
+.thumb-card {
+  box-shadow: 8px 17px 12px 0px rgb(3 1 1 / 20%);
+  height: 210px;
+  background-color: #f0f0f0;
+  width: 303px;
+  display: flex;
+  padding: 14px;
+  border-radius: 7px;
+  justify-content: center;
+  margin: 20px;
+}
+.img-thumb {
+  box-sizing: border-box;
+}
+.img-thumb :hover {
+  box-shadow: 4px 12px 12px 7px rgb(0 0 0 / 10%);
+  cursor: pointer;
+  transition: 0.3s;
+}
+/* thumbnail end */
+/* Make images easier to work with */
+img,
+picture,
+svg {
+  max-width: 100%;
+  display: block;
 }
 
-
-.accordian label:hover { color : #dd5749;}
-.accordian input:checked + label, .accordian input:checked + label:hover {
-   
-   color: #dd5749;
+ul[role="list"],
+ol[role="list"] {
+  list-style: none;
 }
 
-.accordian input { display: none; }
-.accordian article {
-   background: rgba(255, 255, 255, 0.5);
-   margin-top: -1px;
-   overflow: hidden;
-   height: 0px;
-   position: relative;
-   z-index: 10;
-   -webkit-transition: height 0.3s ease-in-out;
-   -moz-transition: height 0.3s ease-in-out;
-   -o-transition: height 0.3s ease-in-out;
-   -ms-transition: height 0.3s ease-in-out;
-   transition: height 0.3s ease-in-out;
+nav {
+  height: 6rem;
+  width: 100vw;
+  display: flex;
+  /* position: fixed; */
+  padding-left: 4rem;
+  padding-right: 4rem;
+  z-index: 10;
+  background-color: #ebebeb;
+  box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
+  margin-bottom: 3rem;
 }
-.accordian article p {
-   padding: 0px 20px 0px 20px;
-   color: #666;
-font-size: 16px;
-font-family:'Open Sans', Arial, sans-serif;
-font-weight: 300;
-line-height: 1.9;
-   
+
+/* Styling Logo*/
+
+.logo {
+  padding: 3vh 3vw;
+  text-align: left;
+  width: 20vw;
 }
-.accordian input:checked ~ article {
-   -webkit-transition: height 0.5s ease-in-out;
-   -moz-transition: height 0.5s ease-in-out;
-   -o-transition: height 0.5s ease-in-out;
-   -ms-transition: height 0.5s ease-in-out;
-   transition: height 0.5s ease-in-out;
-   border-right: 1px solid #efefef;
-   border-left: 1px solid #efefef;
-   border-bottom: 1px solid #efefef
+
+.logo img {
+  height: auto;
+  width: 4rem;
 }
-.accordian input:checked ~ article.item-small { height: 100px; }
-.accordian input:checked ~ article.item-medium { height: 100px; }
+
+/* Styling Navigation Links*/
+
+.nav-links {
+  width: 80vw;
+  display: flex;
+  padding: 0 0.7vw;
+  justify-content: flex-end;
+  align-items: center;
+  text-transform: uppercase;
+  list-style: none;
+  font-weight: 600;
+}
+
+.nav-links li a {
+  margin: 0 0.7vw;
+  text-decoration: none;
+  transition: all ease-in-out 350ms;
+  padding: 10px;
+  color: black;
+}
+
+.nav-links li a:hover {
+  color: #000;
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 50px;
+}
+
+.nav-links li {
+  position: relative;
+}
+
+.nav-links li a:hover::before {
+  width: 80%;
+}
+
+/*Buttons Styling*/
+
+.login-button {
+  padding: 0.6rem 0.8rem;
+  margin-left: 2vw;
+  font-size: 1rem;
+  cursor: pointer;
+  background-color: transparent;
+  border: 1.5px solid #f2f5f7;
+  border-radius: 2em;
+}
+
+.login-button:hover {
+  color: #fff;
+  background-color: #dd5f24;
+  border: 1.5px solid #dd5f24;
+  transition: all ease-in-out 350ms;
+}
+
+/*Navigation Icon Styling*/
+
+.hamburger div {
+  width: 30px;
+  height: 3px;
+  background: #000;
+  margin: 5px;
+  transition: all 0.3s ease;
+}
+
+.hamburger {
+  display: none;
+}
+
+/*Responsive Adding Media Queries*/
+
+@media screen and (max-width: 800px) {
+  nav {
+    position: fixed;
+    z-index: 3;
+  }
+  .hamburger {
+    display: block;
+    position: absolute;
+    cursor: pointer;
+    right: 5%;
+    top: 50%;
+    transform: translate(-5%, -50%);
+    z-index: 2;
+    transition: all 0.7s ease;
+  }
+  .nav-links {
+    background: #ebebeb;
+    /* position: fixed; */
+    opacity: 1;
+    height: 100vh;
+    width: 100%;
+    flex-direction: column;
+    clip-path: circle(50px at 90% -20%);
+    -webkit-clip-path: circle(50px at 90% -10%);
+    transition: all 1s ease-out;
+    pointer-events: none;
+    justify-content: flex-start;
+    gap: 20px;
+    margin-top: 4rem;
+  }
+  .nav-links.open {
+    clip-path: circle(1000px at 90% -10%);
+    -webkit-clip-path: circle(1000px at 90% -10%);
+    pointer-events: all;
+  }
+  .nav-links li {
+    opacity: 0;
+  }
+  .nav-links li:nth-child(1) {
+    transition: all 0.5s ease 0.2s;
+  }
+  .nav-links li:nth-child(2) {
+    transition: all 0.5s ease 0.4s;
+  }
+  .nav-links li:nth-child(3) {
+    transition: all 0.5s ease 0.6s;
+  }
+  .nav-links li:nth-child(4) {
+    transition: all 0.5s ease 0.7s;
+  }
+  .nav-links li:nth-child(5) {
+    transition: all 0.5s ease 0.8s;
+  }
+  .nav-links li:nth-child(6) {
+    transition: all 0.5s ease 0.9s;
+    margin: 0;
+  }
+  .nav-links li:nth-child(7) {
+    transition: all 0.5s ease 1s;
+    margin: 0;
+  }
+
+  li.fade {
+    opacity: 1;
+  }
+
+  /* Navigation Bar Icon on Click*/
+
+  .toggle .bars1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+    background-color: #000;
+  }
+
+  .toggle .bars2 {
+    transition: all 0s ease;
+    width: 0;
+    background-color: #000;
+  }
+
+  .toggle .bars3 {
+    transform: rotate(45deg) translate(-5px, -6px);
+    background-color: #000;
+  }
+}
+/* Nav styling end */
+body {
+  font-family: "Montserrat", sans-serif;
+  background-color: white;
+  color: #fff;
+}
+.div-head h1 {
+  color: black;
+  text-align: center;
+  margin-top: -1.5rem;
+  font-size: 1.5rem;
+}
+.div-head h1::before {
+  position: absolute;
+  content: "";
+  width: 324px;
+  border-bottom: 15px solid #85b839;
+  opacity: 0.6;
+  z-index: -1;
+}
+
+h2 {
+  color: black;
+  text-align: center;
+  margin-top: 1rem;
+  padding-top: 6px;
+  padding-bottom: 10px;
+  font-size: 1.3rem;
+  /* font-weight: 500; */
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  /* font-weight: bolder; */
+}
+.accordion {
+  width: 90%;
+  max-width: 1000px;
+  margin: 2rem auto;
+  background-color: #f0f0f0;
+  /* border: 2px solid grey; */
+  border-radius: 10px;
+  padding-bottom: 10px;
+}
+.accordion-item {
+  background-color: #fff;
+  color: #111;
+  margin: auto;
+  border-radius: 0.5rem;
+  box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.25);
+  margin-bottom: 20px;
+  width: 95%;
+  height: 80%;
+}
+.accordion-item-header {
+  /* padding: 0.2rem 3rem 0.5rem 1rem;
+   */
+  padding: 10px;
+  margin-top: 0.5px;
+  min-height: 0.5rem;
+  line-height: 0.5rem;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+  border-radius: 10px;
+  background-color: #ffffff;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-weight: normal;
+}
+.accordion-item-header::after {
+  content: "\002B";
+  font-size: 2rem;
+  position: absolute;
+  right: 1rem;
+}
+.accordion-item-header.active::after {
+  content: "\2212";
+}
+
+.accordion-item-body {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.5s ease-out;
+}
+.accordion-item-body-content {
+  padding: 1rem;
+  line-height: 1rem;
+  border-top: 1px solid;
+  border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
+  display: flex;
+  justify-content: space-around;
+  /* transition: 2s linear; */
+}
+.sol > p {
+  font-family: Roboto, sans-serif;
+  line-height: 18px;
+  font-size: 15px;
+}
+#faq {
+  margin-right: 0.2rem;
+}
+.btn {
+  cursor: pointer;
+}
+a {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+}
+@media (max-width: 767px) {
+  html {
+    font-size: 14px;
+  }
+}
+.drop-area {
+  display: flex;
+  flex-wrap: inherit;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.sol {
+  padding: 1rem;
+  display: block;
+  justify-content: space-between;
+  /* margin-right: 10%; */
+}
+.content-btn {
+  cursor: pointer;
+  text-decoration: none;
+  border: 0;
+  border-radius: 100vmax;
+  padding: 1.25em 2.5em;
+  line-height: 1;
+  background-color: #85b839;
+  box-shadow: 0 1.125em 1em -1em #dfdfdf;
+  margin-top: 1.25rem;
+}
+
+.content-btn > a {
+  font-weight: bold;
+  color: white;
+}
+
+.videos {
+  display: inline-block;
+  /* margin-left: 10%; */
+}
+.videos {
+  padding: 1rem;
+}
+
+.content-card {
+  position: relative;
+  border-radius: 10px;
+  height: 200px;
+  width: 350px;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0 2px 2px #dfdfdf;
+}
+.content-card iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.footer {
+  background-color: #f0f0f0;
+  width: 100%;
+  text-align: left;
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+  padding: 50px;
+  margin-top: 50px;
+  margin: auto;
+  width: 80%;
+}
+
+.footer .footer-left,
+.footer .footer-center,
+.footer .footer-right {
+  display: inline-block;
+  vertical-align: top;
+}
+
+/* footer left*/
+
+.footer .footer-left {
+  width: 33%;
+  padding-right: 15px;
+}
+
+.footer .about {
+  line-height: 20px;
+  color: black;
+  font-size: 13px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.footer .about span {
+  display: block;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.footer .icons {
+  margin-top: 25px;
+}
+.footer .icons a i {
+  color: black;
+}
+.footer .icons a {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+
+  cursor: pointer;
+  border-radius: 2px;
+  font-size: 20px;
+
+  text-align: center;
+  line-height: 35px;
+  margin-right: 3px;
+  margin-bottom: 5px;
+}
+
+/* footer center*/
+.footer .footer-center {
+  width: 30%;
+}
+
+.footer .footer-center i {
+  font-size: 25px;
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 42px;
+  margin: 10px 15px;
+  vertical-align: middle;
+  color: black;
+}
+
+.footer .footer-center i.fa-envelope {
+  font-size: 17px;
+  line-height: 38px;
+}
+
+.footer .footer-center p {
+  display: inline-block;
+  color: black;
+  font-weight: bold;
+  vertical-align: middle;
+  margin: 0;
+}
+
+.footer .footer-center p span {
+  display: block;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 2;
+}
+
+.footer .footer-center p a {
+  color: #3b3b3b;
+  text-decoration: none;
+}
+
+/* footer right*/
+
+.footer .footer-right {
+  width: 35%;
+}
+
+.footer h2 {
+  color: #505050;
+  font-size: 36px;
+  font-weight: normal;
+  margin: 0;
+  box-shadow: none;
+  border: none;
+  background-color: #f0f0f0;
+}
+
+.footer h2 span {
+  color: #1c1c1c;
+}
+
+.footer .menu {
+  color: #2e2e2e;
+  margin: 20px 0 12px;
+  padding: 0;
+}
+
+.footer .menu a {
+  display: inline-block;
+  line-height: 1.8;
+  text-decoration: none;
+  color: inherit;
+}
+
+.footer .menu a:hover {
+  color: #272727;
+}
+
+.footer .name {
+  color: #363636;
+  font-size: 14px;
+  font-weight: normal;
+  margin: 0;
+}
+
+@media (max-width: 767px) {
+  .footer {
+    font-size: 14px;
+  }
+  .footer .footer-left,
+  .footer .footer-center,
+  .footer .footer-right {
+    display: block;
+    width: 100%;
+    margin-bottom: 40px;
+    text-align: center;
+  }
+  .footer .fofoter-center i {
+    margin-left: 0;
+  }
+
+  .content-card {
+    height: 240px;
+    width: 360px;
+  }
+}
