--- a/server/views/faq.html
+++ b/server/views/faq.html
@@ -36,10 +36,14 @@
         <div class="bars3"></div>
       </div>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Collections</a></li>
-        <li><button class="login-button" href="#">Browse</button></li>
+        <!-- <li><a href="/">Home</a></li>
+        <li><a href="faq">Faq</a></li>
+        <li><a href="product">Product</a></li>
+        <li><button class="login-button" href="terms-cond">T&C</button></li> -->
+        <li><a href="/">Home</a></li>
+        <li><a href="/faq">Faq</a></li>
+        <li><a href="/product">Product</a></li>
+        <li><a href="/terms-cond">T&C</a></li>
       </ul>
     </nav>
     <!-- thumbnail -->
@@ -349,25 +353,31 @@
       <footer class="footer">
         <div class="footer-left col-md-4 col-sm-6">
           <p class="about">
-            <span> About the company</span> Browse the latest products right
-            from your home . We have indian metal handicraft supplies & wall art
-            from top suppliers.
+            <span> About the company</span> About us: We are a Maharashtra-based
+            export company specializing in the supply of handicrafts and
+            Jaggery. At our core, we believe in building long-term relationships
+            with our customers based on trust and exceptional service. Our
+            commitment to quality is unwavering, and we will never compromise on
+            it. We take pride in going above and beyond for our clients and
+            always strive to exceed expectations. Our focus on customization
+            allows customers to personalize their handicraft orders, ensuring a
+            truly unique and personalized experience.
           </p>
           <div class="social-links">
-            <a href="#">
+            <a href="https://www.facebook.com/people/Dhimans/100089375347119/ " target="_blank">
               <i class="fab fa-facebook-f"></i>
             </a>
-            <a href="#">
-              <i class="fab fa-twitter"></i>
+            <a href="https://www.linkedin.com/company/dhiman-s/" target="_blank">
+              <i class="fab fa-linkedin"></i>
             </a>
-            <a href="#">
+            <a href="https://www.instagram.com/dhiman_exports/" target="_blank">
               <i class="fab fa-instagram"></i>
             </a>
-            <a href="#">
+            <a href="https://wa.me/6264959991" target="_blank">
               <i class="fab fa-whatsapp"></i>
             </a>
-            <a href="#">
-              <i class="fab fa-pinterest"></i>
+            <a href="https://www.youtube.com/channel/UCwFhXDP0AB9aBNwbcRWOLRg" target="_blank">
+              <i class="fab fa-youtube"></i>
             </a>
           </div>
           <!-- <div class="icons">
@@ -385,25 +395,25 @@
           </div>
           <div>
             <i class="fa fa-phone"></i>
-            <p>(+00) 0000 000 000</p>
+            <p>+91-9405823171</p>
           </div>
           <div>
             <i class="fa fa-envelope"></i>
-            <p><a href="#"> trade@dhimans.com</a></p>
+            <p><a href="#"> explore@dhiman.org</a></p>
           </div>
         </div>
         <div class="footer-right col-md-4 col-sm-6">
-          <h2>Dhimans</h2>
+          <h2 style="text-align: left;">Dhimans</h2>
           <p class="menu">
-            <a href="#"> Home</a> | <a href="#"> About</a> |
-            <a href="#"> Services</a> |
-            <a href="#"> Contact</a>
+            <a href="/"> Home</a> | <a href="/product"> Products</a> |
+            <a href="/faq"> FAQ</a> |
+            <a href="/terms-cond"> Payment & shipping T&C</a>
           </p>
           <p class="name">Dhimans &copy; 2023</p>
         </div>
       </footer>
       <div class="whatsapp_main">
-        <a href="https://wa.me/9405823171" target="_blank"
+        <a href="https://wa.me/6264959991" target="_blank"
           ><img src="images/whatsapp-con.png" width="100%" class="whatsapp_img"
         /></a>
       </div>
