--- a/server/views/index.html
+++ b/server/views/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link rel="stylesheet" type="text/css" href="../public/styles/style.css" /> -->
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
     <link
       rel="stylesheet"
@@ -33,10 +34,11 @@
         <div class="bars3"></div>
       </div>
       <ul class="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Collections</a></li>
-        <li><button class="login-button" href="#">Browse</button></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/faq">Faq</a></li>
+        <li><a href="/product">Product</a></li>
+        <li><a href="/terms-cond">T&C</a></li>
+        <!-- <li><button class="login-button" href="terms-cond">T&C</button></li> -->
       </ul>
     </nav>
     <!-- <header class="primary-header">
@@ -203,7 +205,7 @@
               <img src="images/6/homecenter.jpeg" alt="" class="featured-img" />
             </div> -->
             <div class="prod-1">
-              <a href="product.html">
+              <a href="/product">
                 <img src="images/1/DSC1.jpg" alt="" class="featured-img" />
                 <img src="images/2/DSC1.JPG" alt="" class="featured-img" />
                 <img src="images/3/DSC1.jpg" alt="" class="featured-img" />
@@ -213,7 +215,7 @@
             </div>
   
             <div class="prod-4">
-              <a href="product.html">
+              <a href="/product">
                 <div class="prod-2">
                   <img src="images/feature-2.jpg" alt="" class="featured-img" />
                   <img src="images/5/DSC2.JPG" alt="" class="featured-img" />
@@ -226,7 +228,7 @@
                   />
                 </div>
               </a>
-              <a href="product.html">
+              <a href="/product">
                 <div class="prod-3">
                   <img src="images/feature-1.jpg" alt="" class="featured-img" />
                   <img src="images/5/DSC2.JPG" alt="" class="featured-img" />
@@ -260,17 +262,17 @@
         <div class="thumbnail">
           <div class="thumb-card">
             <div class="img-thumb">
-              <a href="faq.html"><img src="images/thumb1.png" alt="image" /></a>
+              <a href="/faq"><img src="images/thumb1.png" alt="image" /></a>
             </div>
           </div>
           <div class="thumb-card">
             <div class="img-thumb">
-              <a href="faq.html"><img src="images/thumb2.png" alt="image" /></a>
+              <a href="/faq"><img src="images/thumb2.png" alt="image" /></a>
             </div>
           </div>
           <div class="thumb-card">
             <div class="img-thumb">
-              <a href="faq.html"><img src="images/thumb3.png" alt="image" /></a>
+              <a href="/faq"><img src="images/thumb3.png" alt="image" /></a>
             </div>
           </div>
         </div>
@@ -372,6 +374,28 @@
           </div>
         </div>
       </section>
+      <!-- <div class="safety">
+        <a href="/terms-cond"><button class="safety-btn">Payment, Safety and T&C</button></a>
+</div> -->
+
+      <!-- <section>
+        <div class="safety">
+          <a href="/term-cond"><button class="safety-btn">Payment, Safety and T&C</button></a>
+  </div>
+      </section> -->
+      
+      <div class="pay-head">Payment,Shipment and T&C</div>
+      <section class="payment">
+        <div class="pay-text">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt veritatis ea fugit corporis eum voluptatibus ad harum quod reiciendis, placeat est
+           quisquam id adipisci iure natus asperiores velit perferendis blanditiis.</p>
+        <a href="/termss-cond"><button class="safety-btn">Payment, Shipping and T&C</button></a>
+        </div>
+        <div class="pay-img">
+          <img src="images/thumb1.png" alt="image"/>
+        </div>
+      </section>
+
 
       <section class="contact" id="contact">
         <div class="enquiry-head">
@@ -406,7 +430,7 @@
                 type="text"
                 name="phone"
                 placeholder="918888888888"
-                maxlength="20"
+                maxlength="15"
                 title="country code + phone number "
                 required
               />
@@ -426,7 +450,7 @@
                 required
               ></textarea>
             </div>
-            <button type="submit">Submit</button>
+            <button type="submit" onclick="submitForm()">Submit</button>
           </form>
           <div class="map">
             <span>Find us at:</span>
@@ -445,25 +469,31 @@
       <footer class="footer">
         <div class="footer-left col-md-4 col-sm-6">
           <p class="about">
-            <span> About the company</span> Browse the latest products right
-            from your home . We have indian metal handicraft supplies & wall art
-            from top suppliers.
+            <span> About the company</span> About us: We are a Maharashtra-based
+            export company specializing in the supply of handicrafts and
+            Jaggery. At our core, we believe in building long-term relationships
+            with our customers based on trust and exceptional service. Our
+            commitment to quality is unwavering, and we will never compromise on
+            it. We take pride in going above and beyond for our clients and
+            always strive to exceed expectations. Our focus on customization
+            allows customers to personalize their handicraft orders, ensuring a
+            truly unique and personalized experience.
           </p>
           <div class="social-links">
-            <a href="#">
+            <a href="https://www.facebook.com/people/Dhimans/100089375347119/ " target="_blank">
               <i class="fab fa-facebook-f"></i>
             </a>
-            <a href="#">
-              <i class="fab fa-twitter"></i>
+            <a href="https://www.linkedin.com/company/dhiman-s/" target="_blank">
+              <i class="fab fa-linkedin"></i>
             </a>
-            <a href="#">
+            <a href="https://www.instagram.com/dhiman_exports/" target="_blank">
               <i class="fab fa-instagram"></i>
             </a>
-            <a href="#">
+            <a href="https://wa.me/6264959991" target="_blank">
               <i class="fab fa-whatsapp"></i>
             </a>
-            <a href="#">
-              <i class="fab fa-google-plus"></i>
+            <a href="https://www.youtube.com/channel/UCwFhXDP0AB9aBNwbcRWOLRg" target="_blank">
+              <i class="fab fa-youtube"></i>
             </a>
           </div>
           <!-- <div class="icons">
@@ -481,25 +511,25 @@
           </div>
           <div>
             <i class="fa fa-phone"></i>
-            <p>(+00) 0000 000 000</p>
+            <p>+91-9405823171</p>
           </div>
           <div>
             <i class="fa fa-envelope"></i>
-            <p><a href="#"> trade@dhimans.com</a></p>
+            <p><a href="#"> explore@dhiman.org</a></p>
           </div>
         </div>
         <div class="footer-right col-md-4 col-sm-6">
           <h2>Dhimans</h2>
           <p class="menu">
-            <a href="#"> Home</a> | <a href="#"> About</a> |
-            <a href="#"> Services</a> |
-            <a href="#"> Contact</a>
+            <a href="/"> Home</a> | <a href="/product"> Products</a> |
+            <a href="/faq"> FAQ</a> |
+            <a href="/terms-cond"> Payment & shipping T&C</a>
           </p>
           <p class="name">Dhimans &copy; 2023</p>
         </div>
       </footer>
       <div class="whatsapp_main">
-        <a href="https://wa.me/9405823171" target="_blank"
+        <a href="https://wa.me/6264959991" target="_blank"
           ><img src="images/whatsapp-con.png" width="7%" class="whatsapp_img"
         /></a>
       </div>
