--- a/server/views/index.html
+++ b/server/views/index.html
@@ -469,15 +469,7 @@
       <footer class="footer">
         <div class="footer-left col-md-4 col-sm-6">
           <p class="about">
-            <span> About the company</span> About us: We are a Maharashtra-based
-            export company specializing in the supply of handicrafts and
-            Jaggery. At our core, we believe in building long-term relationships
-            with our customers based on trust and exceptional service. Our
-            commitment to quality is unwavering, and we will never compromise on
-            it. We take pride in going above and beyond for our clients and
-            always strive to exceed expectations. Our focus on customization
-            allows customers to personalize their handicraft orders, ensuring a
-            truly unique and personalized experience.
+            <span> About the company</span> We are a Maharashtra-based export company providing quality handicrafts and Jaggery. Our commitment to trust, transparency, and uncompromising quality sets us apart. With a focus on customization, we offer a unique and personalized experience for our customers.
           </p>
           <div class="social-links">
             <a href="https://www.facebook.com/people/Dhimans/100089375347119/ " target="_blank">
@@ -529,7 +521,7 @@
         </div>
       </footer>
       <div class="whatsapp_main">
-        <a href="https://wa.me/6264959991" target="_blank"
+        <a href="https://wa.me/9405823171" target="_blank"
           ><img src="images/whatsapp-con.png" width="7%" class="whatsapp_img"
         /></a>
       </div>
