frontend admin product panel done

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -389,7 +389,7 @@
         <div class="pay-text">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt veritatis ea fugit corporis eum voluptatibus ad harum quod reiciendis, placeat est
            quisquam id adipisci iure natus asperiores velit perferendis blanditiis.</p>
-        <a href="/termss-cond"><button class="safety-btn">Payment, Shipping and T&C</button></a>
+        <a href="/terms-cond"><button class="safety-btn">Payment, Shipping and T&C</button></a>
         </div>
         <div class="pay-img">
           <img src="images/thumb1.png" alt="image"/>
@@ -481,7 +481,7 @@
             <a href="https://www.instagram.com/dhiman_exports/" target="_blank">
               <i class="fab fa-instagram"></i>
             </a>
-            <a href="https://wa.me/6264959991" target="_blank">
+            <a href="https://wa.me/9405823171" target="_blank">
               <i class="fab fa-whatsapp"></i>
             </a>
             <a href="https://www.youtube.com/channel/UCwFhXDP0AB9aBNwbcRWOLRg" target="_blank">
